--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@
 
 /* Свойства всей страницы */
 body {
+  width: 1600px;
+  margin: auto auto;
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
 
@@ -162,6 +164,8 @@ ul {
 }
 
 .portfolio-button {
+  padding: 6px 22px;
+  text-align: center;
   color: var(--title-text-color);
   background-color: var(--primary-button-bg-color);
 
@@ -170,6 +174,10 @@ ul {
   font-size: 16px;
   line-height: 1.62;
   cursor: pointer;
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .portfolio-button:hover,
@@ -188,6 +196,8 @@ ul {
 
 .section.last {
   margin-bottom: 0;
+  width: 1600px;
+  background-color: var(--primary-button-bg-color);
 }
 
 .section-title {
@@ -204,10 +214,13 @@ ul {
 /* Настройка секции "Особенности" */
 .features {
   display: flex;
-  justify-content: space-evenly;
-  padding: 0;
-  /* width: calc((100% - 90px) / 4); */
+  padding-left: 0;
+  width: calc((100% - 90px) / 4);
   color: var(--primary-text-color);
+}
+
+.features .item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .features .title {
@@ -221,18 +234,41 @@ ul {
 }
 
 .features .item {
-  max-width: 270px;
+  min-width: 270px;
+}
+
+/* Настройка секции "Чем мы занимаемся" */
+.our-work {
+  display: flex;
+  padding-left: 0;
+}
+
+.our-work .item:not(:last-child) {
+  margin-right: 30px;
 }
 
 /* Настройка секции "Наша команда" */
 .our-team {
+  display: flex;
+  padding-left: 0;
+  padding-bottom: 94px;
   color: var(--primary-text-color);
 
   font-size: 16px;
   line-height: 1.19;
 }
 
+.our-team .cards:not(:last-child) {
+  margin-right: 30px;
+}
+
+.our-team .cards {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 .our-team .title {
+  text-align: center;
   color: var(--title-text-color);
 
   font-weight: 500;
@@ -253,6 +289,7 @@ ul {
 }
 
 .cards .text {
+  text-align: center;
   padding-bottom: 30px;
 }
 
@@ -296,15 +333,46 @@ ul {
 }
 
 /* Контент вкладки "Портфолио" */
+.filter-buttons {
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+  margin-bottom: 50px;
+}
+
+.filter-buttons .item:not(:last-child) {
+  margin-right: 8px;
+}
 
 .filter {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  padding-bottom: 94px;
+
   font-size: 16px;
   line-height: 1.87;
+}
+
+.filter .item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.filter .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.filter .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .filter .link {
   color: var(--primary-text-color);
   display: inline-block;
+  width: 370px;
+  background: var(--primary-white-color);
+  border: 1px solid #eeeeee;
 }
 
 .filter .title {
@@ -326,7 +394,7 @@ ul {
   padding-left: 15px;
   padding-right: 15px;
 
-  outline: 2px solid tomato;
+  /* outline: 2px solid tomato; */
 }
 
 .section.portfolio {
@@ -339,8 +407,10 @@ ul {
 
 .link > .title {
   margin-bottom: 4px;
+  padding-left: 24px;
 }
 
 .link > .text {
   padding-bottom: 20px;
+  padding-left: 24px;
 }
