--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ ul {
 /* Навигация по сайту */
 .site-nav {
   display: flex;
+  padding-left: 0;
 }
 
 .site-nav .item:not(:last-child) {
@@ -124,6 +125,7 @@ ul {
 .hero {
   background-color: var(--secondary-bg-color);
   text-align: center;
+  height: 600px;
   margin-bottom: 94px;
 }
 
@@ -135,11 +137,14 @@ ul {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  padding-top: 200px;
   margin-bottom: 30px;
 }
-
 /* Настройка отображения кнопок */
 .button {
+  /* display: flex;
+  align-items: center; */
+  text-align: center;
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 
@@ -149,12 +154,13 @@ ul {
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
+  border: none;
 
   border-radius: 4px;
   padding: 10px 32px;
   margin: 0 auto;
-  min-width: 200px;
-  text-align: center;
+  width: 200px;
+  height: 50px;
 }
 
 .button:hover,
@@ -177,6 +183,8 @@ ul {
 
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  border: none;
+  box-shadow: none;
   border-radius: 4px;
 }
 
@@ -211,6 +219,10 @@ ul {
   margin-bottom: 50px;
 }
 
+.section-title.hide {
+  display: none;
+}
+
 /* Настройка секции "Особенности" */
 .features {
   display: flex;
@@ -227,7 +239,7 @@ ul {
   color: var(--title-text-color);
 
   font-weight: 700;
-  line-height: 1.14;
+  line-height: 16.41px;
   text-transform: uppercase;
 
   margin-bottom: 10px;
@@ -255,7 +267,7 @@ ul {
   color: var(--primary-text-color);
 
   font-size: 16px;
-  line-height: 1.19;
+  line-height: 19px;
 }
 
 .our-team .cards:not(:last-child) {
@@ -263,8 +275,10 @@ ul {
 }
 
 .our-team .cards {
+  background: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .our-team .title {
@@ -273,7 +287,9 @@ ul {
 
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.19;
+  line-height: 19px;
+
+  margin-bottom: 10px;
 }
 
 .section-title.team {
@@ -284,10 +300,6 @@ ul {
   margin-bottom: 30px;
 }
 
-.our-team .title {
-  margin-bottom: 10px;
-}
-
 .cards .text {
   text-align: center;
   padding-bottom: 30px;
@@ -296,6 +308,7 @@ ul {
 /* ПОДВАЛ */
 .footer {
   background-color: var(--secondary-bg-color);
+  height: 252px;
 }
 
 .logo-foot {
@@ -308,7 +321,7 @@ ul {
   text-decoration: none;
 
   display: inline-block;
-  margin-top: 60px;
+  padding-top: 60px;
   margin-bottom: 20px;
 }
 
@@ -318,11 +331,14 @@ ul {
   font-style: inherit;
   line-height: 1.71;
   text-decoration: none;
+
+  margin-bottom: 9px;
 }
 
 .address {
   font-style: normal;
   padding-bottom: 60px;
+  padding-left: 0;
 }
 
 .address .link-opacity {
