--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --primary-black-color: #000000;
   --secondary-bg-color: #2f303a;
   --primary-button-bg-color: #f5f4fa;
+  --primary-border-color: #ececec;
 }
 
 /* Свойства всей страницы */
@@ -41,6 +42,10 @@ ul {
 }
 
 /* ШАПКА */
+header {
+  border-bottom: 1px solid var(--primary-border-color);
+}
+
 /* Логотип (текст) */
 .container.flex {
   display: flex;
@@ -181,8 +186,6 @@ ul {
   line-height: 1.62;
   cursor: pointer;
 
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
   border: none;
   box-shadow: none;
   border-radius: 4px;
@@ -192,6 +195,8 @@ ul {
 .portfolio-button:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Настройка свойств секций */
@@ -287,7 +292,7 @@ ul {
 
   font-weight: 500;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 18.75px;
 
   margin-bottom: 10px;
 }
@@ -297,6 +302,7 @@ ul {
 }
 
 .our-team .workers {
+  display: block;
   margin-bottom: 30px;
 }
 
@@ -331,8 +337,6 @@ ul {
   font-style: inherit;
   line-height: 1.71;
   text-decoration: none;
-
-  margin-bottom: 9px;
 }
 
 .address {
@@ -346,13 +350,18 @@ ul {
 
   line-height: 1.71;
   text-decoration: none;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.address > .item {
+  margin-bottom: 9px;
+}
 /* Контент вкладки "Портфолио" */
 .filter-buttons {
   display: flex;
   justify-content: center;
   padding-left: 0;
+  padding-top: 94px;
   margin-bottom: 50px;
 }
 
@@ -389,6 +398,10 @@ ul {
   width: 370px;
   background: var(--primary-white-color);
   border: 1px solid #eeeeee;
+}
+
+.filter .posters {
+  display: block;
 }
 
 .filter .title {
